# HW_31

./: ads.json  csv_to_json.py  db.sqlite3  pyproject.toml  pytest.ini  readme.md  tests.http
ads/: admin.py  models.py  permissions.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_author.py  0002_selection.py  0003_category_slug.py  0004_alter_category_slug.py  0005_alter_ad_description_alter_ad_name.py
ads/serializers/: ad_serializers.py  cat_serializers.py  selection.py
ads/urls/: ad.py  cat.py  selection.py
ads/views/: ad.py  cat.py  selection.py
data/: csv_to_json.py  user.json
shop/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_users_location.py  0002_alter_users_managers_users_date_joined_users_email_and_more.py  0003_alter_users_age.py  0004_alter_users_role.py  0005_users_birth_date_alter_users_email.py  0006_alter_users_email.py
